--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -1,6 +1,6 @@
 <table>
     <div class="container-fluid haven p-0">
-        <div class="p-2 float-right">
+        <div class="p-2 float-right" (click)="addPatient()" >
             <button type="button" class="btn btn-info">+</button>
         </div>
         <div class="input-group " style="width:100%;">
