--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -13,7 +13,7 @@
             </div>
             <!-- <div class="row"> -->
             <div class="col-12">
-                    <form>
+                    <form (ngSubmit)="login()" #f="ngForm">
                         <div class="col-12">
                             <div class="form-group"></div>
                         </div>
@@ -22,7 +22,7 @@
                                 <label class="animated-label">EMAIL</label>
                                 <div>
                                     <i class="fa fa-envelope right"></i>
-                                    <input class="form-control box-align" name="inputEmail"  required="" type="text">
+                                    <input class="form-control box-align" name="inputEmail"  required="" type="text" [(ngModel)]="user.email" #email="ngModel">
                                 </div>
                         </div>
                     </div>
@@ -31,7 +31,7 @@
                                 <label class="animated-label">PASSWORD</label>
                                 <div>
                                     <i class="fa fa-lock right"></i>
-                                    <input class="form-control box-align" name="inputEmail"  required="" type="text">
+                                    <input class="form-control box-align" name="inputEmail"  required="" type="text" [(ngModel)]="user.password" #password="ngModel">
                                 </div>
                         </div>
                     </div>
