--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -102,7 +102,10 @@ input:focus {
 }
 .d-block {
     display: block!important;
+    font-family: Muli, sans-serif !important;
 }
 .text-link {
     color: #5a60aa!important;
+    font-family: Muli, sans-serif !important;
+
 }
