fix: login desing.

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -19,10 +19,10 @@
                         </div>
                         <div class="col-12">
                         <div class="form-group">
-                                <div>
-                                    <label class="animated-label">EMAIL</label>
-                                    <i class="fa fa-envelope right float-right"></i>
-                                    <input class="form-control box-align" name="inputEmail" required="" type="text"  [(ngModel)]="user.email" #email="ngModel" >
+                            <div>
+                                <label class="animated-label m-0">EMAIL</label>
+                                <i class="fa fa-envelope right float-right" style="bottom: 8px;"></i>
+                                <input class="form-control box-align" name="inputEmail" required="" type="text"  [(ngModel)]="user.email" #email="ngModel" >
                                 </div>
                            </div>
                         </div>
@@ -30,14 +30,14 @@
                           <div class="form-group">
                                 <div>
                                     <label class="animated-label">PASSWORD</label>
-                                    <i class="fa fa-lock right float-right"></i>
+                                    <i class="fa fa-lock right float-right" style="bottom: 8px;"></i>
                                     <input  [(ngModel)]="user.password" #password="ngModel" class="form-control box-align" name="inputEmail"  required="" type="text"  [(ngModel)]="user.password" #password="ngModel">
                                 </div>
                          </div>
                          </div>
                         <div class="col-3">
                         <button type="submit" class="btn btn-theme btn-register">Login
-                            <i class="fa fa-angle-right pt-2" style="margin-right: 45px;"></i>
+                            <i class="fa fa-angle-right pt-2" style="margin-right: 95px;"></i>
                         </button>
                         </div>
                         <div class="col-12 my-3">
