fix: forget password

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="col-12 my-3">
                         <a href="#" class="login-text d-block">Don't have an Account?</a>
-                        <a href="#" class=" d-block login-text text-link mt-2">Forgot Password</a>
+                        <a href="javascript:void(0)" class=" d-block login-text text-link mt-2" (click) = "ForgetPassword()">Forgot Password</a>
                          </div>
                   </form>
     
