--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -8,7 +8,7 @@
                 <input type="text" id="clinicId" name="clinicId" [(ngModel)]="clinicId" class="form-control" placeholder="Enter Clinic ID" required=""
                     autofocus="">
             </div>
-            <button type="submit" class="btn btn-primary">Procced</button>
+            <button type="submit" class="btn btn-primary">Proceed</button>
             <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
         </form>
     </div>
