--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,1 +1,2 @@
 <router-outlet></router-outlet>
+<ngx-spinner type="ball-spin-clockwise" [fullScreen]="true" size="medium" bdColor="rgba(0, 0, 0, 0.1)" color="#1F4792"></ngx-spinner>
