--- a/src/app/layouts/full-layout/full-layout.component.html
+++ b/src/app/layouts/full-layout/full-layout.component.html
@@ -1,2 +1,3 @@
 <router-outlet></router-outlet>
 <p>full</p>
+<ngx-spinner type="ball-spin-clockwise" [fullScreen]="true" size="medium" bdColor="rgba(0, 0, 0, 0.1)" color="#1F4792"></ngx-spinner>
