fix: data merge issue

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -31,7 +31,7 @@
                                 <div>
                                     <label class="animated-label">PASSWORD</label>
                                     <i class="fa fa-lock right float-right" style="bottom: 8px;"></i>
-                                    <input  [(ngModel)]="user.password" #password="ngModel" class="form-control box-align" name="inputEmail"  required="" type="text"  [(ngModel)]="user.password" #password="ngModel">
+                                    <input  [(ngModel)]="user.password" #password="ngModel" class="form-control box-align" name="inputEmail"  required="" type="password"  [(ngModel)]="user.password" #password="ngModel">
                                 </div>
                          </div>
                          </div>
