--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="input-group " style="width:100%;">
             <input type="search" class="form-control list-group-flush" placeholder="Search for a patient" name="searchText"
-            autocomplete="off"  ngModel="searchText"  (change)="onSearchChange()">
+            autocomplete="off"  [(ngModel)]="searchText"  (change)="onSearchChange()">
             <div class="input-group-append pheight" >
                 <button class="btn btn-secondary color-black" type="button"> <img src="assets/img/Patients.png"></button>
             </div>
