fix: header profile

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,9 +1,16 @@
 <div class="container-fluid head">
-    <div>
-        <img src="assets/img/geniemd.png" alt="logo" style="height: 60px;">
-        <a class="text-center m-0" style="float: right;">
-            <img src="assets/img/Logout.png">
-            <h6  class="text-muted">Logout</h6>
-        </a>
+    <div class="row">
+        <div class="col-md-6 text-left">
+            <img src="assets/img/geniemd.png" alt="logo" style="height: 60px;">
+        </div>
+        <div class="col-md-6 text-right row">
+                <div style="font-size: 20px" class="offset-md-8 col-md-3 pt-3">{{profileName}}</div>
+                <div class="col-md-1">
+                <a class="m-0">
+                    <img src="assets/img/Logout.png" class="pr-1"><br>
+                    <span class="text-muted">Logout</span>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
