--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid head">
     <div class="row">
         <div class="col-md-6 text-left">
-            <img src="assets/img/geniemd.png" alt="logo" style="height: 60px;">
+            <img src="{{clinicConfigLog?.logo}}" alt="logo" style="height: 60px;">
         </div>
         <div class="col-md-6 text-right row">
                 <div style="font-size: 20px" class="offset-md-8 col-md-3 pt-3">{{profileName}}</div>
