--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -5,7 +5,7 @@
                 <div class="heading">
                     <img 
                     style="border: 8px solid white;background-repeat: no-repeat;background-position: center center;height: auto;max-height:84px;margin: auto;width: auto;max-width: 340px;"
-                    class=":login-logo"  alt="" src="https://geniemd-generalfiles.s3.amazonaws.com/688b12a4742c4986bf8d68e4e97f73ba.png?AWSAccessKeyId=AKIAIZH5KUW5NWRU5FDQ&Expires=1928697718&Signature=Yz%2FzhESmSzq781QKWf1HtsQer14%3D">
+                    class=":login-logo"  alt="" src="{{clinicConfigLog?.logo}}">
             </div>
             </div>
             <div class="col-12 mt-6">
