--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -11,6 +11,7 @@
             </div>
         </div>
         <div *ngIf="patientFullList">
+            <ng-container *ngIf = "patientlist && patientlist.length">
             <li class="list-group-item" (click)="selectedPatient(patient)" *ngFor="let patient of patientlist">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-lg-3 p-3">
@@ -33,6 +34,10 @@
                     </div>
                 </div>
             </li>
+        </ng-container>
+        <ng-container *ngIf = "patientlist && !patientlist.length">
+            No data found
+        </ng-container>
         </div>
     </div>
 
