--- a/src/app/pages/dashboard/patients/patients.component.scss
+++ b/src/app/pages/dashboard/patients/patients.component.scss
@@ -89,6 +89,10 @@ ul {
 .pt-14 {
   padding-top: 14px;
 }
+.activated{
+  border-left-color: #17a2b8 !important;
+  border-left-width: 10px!important;
+  border-left-style: solid!important;}
 
 
 
