--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,32 @@
-<router-outlet></router-outlet>
+<nb-layout>
 
-<!-- <nb-layout>
-  <nb-layout-header>
-    Header
+  <nb-layout-header fixed>
+  <!-- Insert header here -->
   </nb-layout-header>
-  <nb-layout-footer>
-    Footer
-  </nb-layout-footer>
-  <nb-layout-column>
-    Dashboard Coming soon..
-    <router-outlet></router-outlet>
 
+  <nb-layout-column>
+    <router-outlet></router-outlet>
+    
+    <!-- <nb-layout>
+      <nb-layout-header>
+        Header
+      </nb-layout-header>
+      <nb-layout-footer>
+        Footer
+      </nb-layout-footer>
+      <nb-layout-column>
+        Dashboard Coming soon..
+        <router-outlet></router-outlet>
+    
+      </nb-layout-column>
+      <nb-sidebar>
+        Sidebar
+      </nb-sidebar>
+    </nb-layout> -->
   </nb-layout-column>
-  <nb-sidebar>
-    Sidebar
-  </nb-sidebar>
-</nb-layout> -->
+
+  <nb-layout-footer fixed>
+  <!-- Insert footer here -->
+  </nb-layout-footer>
+
+</nb-layout>
