fix: component dashboard

--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -6,7 +6,7 @@
         Footer
       </nb-layout-footer>
       <nb-layout-column>
-        Dashboard Coming soon..
+        <app-dashboard></app-dashboard>
         <router-outlet></router-outlet>
     
       </nb-layout-column>
