--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -7,7 +7,7 @@
   <nb-layout-column>
     <router-outlet></router-outlet>
   </nb-layout-column>
-  <nb-sidebar>
+  <nb-sidebar responsive>
     <nb-menu [items]="menus"></nb-menu>
   </nb-sidebar>
 </nb-layout>
