--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -1,1 +1,8 @@
-<p>list works!</p>
+<nb-card size="large">
+    <nb-list>
+      <nb-list-item *ngFor="let user of users">
+        <nb-user [name]="user.name" [title]="user.title">
+        </nb-user>
+      </nb-list-item>
+    </nb-list>
+  </nb-card>
