--- a/src/app/pages/patients/index/index.component.html
+++ b/src/app/pages/patients/index/index.component.html
@@ -3,6 +3,6 @@
         <app-patient-list></app-patient-list>
     </div>
     <div class="col-md-9">
-        <p>index works!</p>
+        <nb-route-tabset [tabs]="tabs"></nb-route-tabset>
     </div>
 </div>
