--- a/src/app/pages/patients/index/index.component.html
+++ b/src/app/pages/patients/index/index.component.html
@@ -3,6 +3,11 @@
         <app-patient-list></app-patient-list>
     </div>
     <div class="col-md-9">
+        <nb-card>
+            <nb-card-body>
+                <span class="h4">Vasanth Jagadeesan</span>
+            </nb-card-body>
+        </nb-card>
         <nb-route-tabset [tabs]="tabs"></nb-route-tabset>
     </div>
 </div>
