--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<nb-card>
+    <nb-card-body>
+        <span class="h4">Vasanth Jagadeesan</span>
+    </nb-card-body>
+</nb-card>
+<nb-route-tabset [tabs]="tabs"></nb-route-tabset>
