--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<!-- <p>login works!</p> -->
+<nb-icon icon="star"></nb-icon>
+<nb-form-field>
+    <nb-icon nbPrefix icon="at-outline" pack="eva"></nb-icon>
+    <input type="text" nbInput>
+</nb-form-field>
