--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/helpers";
 @import '~bootstrap/scss/grid';
+@import "~bootstrap/scss/utilities/api";
 
 @include nb-install() {
   @include nb-theme-global();
