--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -1,13 +1,19 @@
 <nb-card size="large">
+    <nb-card-body>
+        <nb-form-field>
+            <nb-icon nbPrefix icon="search-outline"></nb-icon>
+            <input type="search"  name="searchText" fullWidth status="success" nbInput  [(ngModel)]="searchText" (ngModelChange)="getPatients()">
+        </nb-form-field>
+    </nb-card-body>
     <nb-list>
         <nb-list-item>
             <nb-form-field>
                 <nb-icon nbPrefix icon="search-outline"></nb-icon>
-                <input type="text" fullWidth status="success" nbInput>
+                <input type="search"  name="searchText" fullWidth status="success" nbInput  [(ngModel)]="searchText" (ngModelChange)="getPatients()">
             </nb-form-field>
         </nb-list-item>
         <nb-list-item *ngFor="let user of users">
-            <nb-user [name]="user.name" [title]="user.title">
+            <nb-user [name]="user.firstName" [title]="user.lastName">
             </nb-user>
         </nb-list-item>
     </nb-list>
