WIP: work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,23 @@
+
+
 <router-outlet></router-outlet>
+  
+ 
+
+
+<nb-layout>
+
+  <nb-layout-header fixed>
+  </nb-layout-header>
+
+  <nb-layout-column>
+    <div>
+      <button nbbutton (click)="open()">Modal</button>
+    <!-- <app-clinic-prompt></app-clinic-prompt> -->
+  </div>
+  </nb-layout-column>
+
+  <nb-layout-footer fixed>
+  </nb-layout-footer>
+
+</nb-layout>
