--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,12 +1,12 @@
-<div class="d-flex align-items-center h-100 justify-content-center">
-    <nb-card class="w-75">
+<form (ngSubmit)="submit()" class="d-flex align-items-center h-100 justify-content-center">
+    <nb-card class="w-75" [nbSpinner]="isLoading">
         <nb-card-body>
             <div class="mb-3 form-group">
                 <label for="username" class="form-label">Username</label>
                 <nb-form-field>
                     <nb-icon nbPrefix icon="email-outline"></nb-icon>
                     <input type="text" class="form-control" nbInput fullWidth shape="rectangle"
-                        placeholder="Enter your username">
+                        placeholder="Enter your username" name="username" [(ngModel)]="model.username">
                 </nb-form-field>
             </div>
             <div class="mb-3 form-group">
@@ -14,10 +14,10 @@
                 <nb-form-field>
                     <nb-icon nbPrefix icon="email-outline"></nb-icon>
                     <input type="password" class="form-control" nbInput fullWidth shape="rectangle"
-                        placeholder="Enter your password">
+                        placeholder="Enter your password" name="password" [(ngModel)]="model.password">
                 </nb-form-field>
             </div>
             <button nbButton hero status="primary" type="submit">Log in</button>
         </nb-card-body>
     </nb-card>
-</div>
+</form>
