fix: set clinic logo

--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -4,6 +4,9 @@
       <a nbButton ghost (click)="toggleSidebar()">
         <nb-icon icon="menu-2-outline"></nb-icon>
       </a>
+      <span class="ps-2">
+        <img [src]="logo" alt="" height="32">
+      </span>
       <span class="ms-auto">
         <nb-user name="John Doe" title="Engineer"></nb-user>
       </span>
