--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,16 @@
-<p>forgot-password works!</p>
+<div class="d-flex align-items-center h-100 justify-content-center">
+    <nb-card class="w-75" [nbSpinner]="isLoading">
+        <nb-card-body>
+            <form (ngSubmit)="submit()">
+                <div class="mb-3 form-group">
+                    <label for="email" class="form-label">Email</label>
+                    <nb-form-field>
+                        <nb-icon nbPrefix icon="email-outline"></nb-icon>
+                        <input type="text" class="form-control" nbInput fullWidth shape="rectangle" placeholder="Enter your email"  name="email" [(ngModel)]="email">
+                    </nb-form-field>
+                </div>
+                <button nbButton hero status="primary" type="submit" [disabled]="!email">Send</button>
+            </form>
+        </nb-card-body>
+    </nb-card>
+</div>
