FIX: logout-confimation modal

--- a/src/app/shared/components/clinic-prompt/clinic-prompt.component.html
+++ b/src/app/shared/components/clinic-prompt/clinic-prompt.component.html
@@ -4,10 +4,11 @@
     <nb-card-body>
         <p>Please enter the Clinic ID to continue.</p>
 
-        <input nbInput [(ngModel)]="clinicID" placeholder="ClinicID" class="size-medium status-basic shape-rectangle" name="clinicID">
+        <input nbInput [(ngModel)]="clinicID" placeholder="ClinicID" class="size-medium status-basic shape-rectangle" name="clinicID" id="enteramt">
+        <small id="helpBlock" class="form-text text-muted">It will takes you to the login page</small>
     </nb-card-body>
     <nb-card-footer>
         <button nbButton status="primary"
-            class="appearance-filled size-medium shape-rectangle status-primary" (click)="click()">Proceed</button>
+            class="appearance-filled size-medium shape-rectangle status-primary" (click)="click($event)">Proceed</button>
     </nb-card-footer>
 </nb-card>
