--- a/src/app/shared/components/clinic-prompt/clinic-prompt.component.scss
+++ b/src/app/shared/components/clinic-prompt/clinic-prompt.component.scss
@@ -7,4 +7,12 @@ button {
     width: 10rem;
     margin: 10px 0px 10px;
   }
+  #enteramt {
+    width: 150px;
+    display: inline;
+  }
   
+  #helpBlock {
+    font-size: small;
+    display: block;
+  }
