FIX: footer and version

--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -18,4 +18,5 @@
   <nb-sidebar responsive>
     <nb-menu [items]="menus"></nb-menu>
   </nb-sidebar>
+  <nb-layout-footer><span class="caption">{{version}}</span></nb-layout-footer>
 </nb-layout>
