--- a/src/app/auth/index/index.component.html
+++ b/src/app/auth/index/index.component.html
@@ -3,5 +3,5 @@
       <router-outlet></router-outlet>
     </nb-layout-column>
     <nb-layout-column class="colored-column-warning">Second</nb-layout-column>
+    <nb-layout-footer><span class="caption">{{version}}</span></nb-layout-footer>
 </nb-layout>
-  
